# whitepoint-disk_management-linux-cpp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
example/: CMakeLists.txt  Makefile
example/src/: main.cpp
include/: disk-management
include/disk-management/: delete.h  details.h
include/disk-management/delete-methods/: gutmann-method.h  secure-erase.h
src/: delete.cpp  details.cpp  disk-management.cpp  disk.cpp  gutmann-method.cpp  secure-erase.cpp
src/internal/: gutmann-method.h  secure-erase.h
